Changed margin for notification icon

--- a/app.css
+++ b/app.css
@@ -110,7 +110,7 @@ header .search input#input-search::placeholder {
 }
 
 header .notification-icon {
-	margin: 0 8px;
+	margin: 8px;
 }
 
 header .menu {
