--- a/app.css
+++ b/app.css
@@ -1,201 +1,194 @@
 :root {
-	/* Shopify Navigation Bar Colors */
-	--nav50: #656266;
-	--nav100: #616161;
-	--nav200: #322f33;
-	--nav300: #1c181d;
-
-	/* Font Colors */
-	--light: #e3e3e3;
-	--mid: #616161;
-	--dark: #475467;
-
-	/* Stroke Colors */
-	--stroke50: #ebebeb;
-	--stroke100: rgba(0, 0, 0, 0.07);
-	--stroke200: rgba(255, 255, 255, 0.2);
-	--nav-search-stroke: #b5b5b5;
-
-	/* State Colors */
-	--hover: #f7f7f7;
-	--pressed: #f0f0f0;
-	--focused: #005bd3;
-
-	/* Plain Colors */
-	--white: #ffffff;
-	--background: #f1f1f1;
-
-	/* Other Colors */
-	--dark-bg: #1a1a1a;
-	--font-dark: #323232;
+  /* Shopify Navigation Bar Colors */
+  --nav50: #656266;
+  --nav100: #616161;
+  --nav200: #322f33;
+  --nav300: #1c181d;
+  /* Font Colors */
+  --light: #e3e3e3;
+  --mid: #616161;
+  --dark: #475467;
+  /* Stroke Colors */
+  --stroke50: #ebebeb;
+  --stroke100: rgba(0, 0, 0, 0.07);
+  --stroke200: rgba(255, 255, 255, 0.2);
+  --nav-search-stroke: #b5b5b5;
+  /* State Colors */
+  --hover: #f7f7f7;
+  --pressed: #f0f0f0;
+  --focused: #005bd3;
+  /* Plain Colors */
+  --white: #ffffff;
+  --background: #f1f1f1;
+  /* Other Colors */
+  --dark-bg: #1a1a1a;
+  --font-dark: #323232;
 }
 
 /* Reset */
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
 /* Typography - line-height and font-weight */
 .lineheight-13 {
-	line-height: 1.3;
+  line-height: 1.3;
 }
 
 .lineheight-14 {
-	line-height: 1.4;
+  line-height: 1.4;
 }
 
 .fontweight-400 {
-	font-weight: 400;
+  font-weight: 400;
 }
 
 .fontweight-500 {
-	font-weight: 500;
+  font-weight: 500;
 }
 
 .fontweight-600 {
-	font-weight: 600;
+  font-weight: 600;
 }
 
 .fontsize-12 {
-	font-size: 12px;
+  font-size: 12px;
 }
 
 .fontsize-13 {
-	font-size: 13px;
+  font-size: 13px;
 }
 
 .fontsize-14 {
-	font-size: 14px;
+  font-size: 14px;
 }
 
 body {
-	background: var(--background);
+  background: var(--background);
 }
 
 /* header styles */
 header {
-	display: flex;
-	align-items: center;
-	background-color: var(--nav300);
-	padding: 12px 15px;
+  display: flex;
+  align-items: center;
+  background-color: var(--nav300);
+  padding: 12px 15px;
 }
-
 header .search {
-	position: relative;
-	display: flex;
-	align-items: center;
-	flex: 1;
-	border-radius: 8px;
-	border: 1px solid var(--nav100);
-	background-color: var(--nav200);
-	padding: 5px;
-	margin-left: 8px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex: 1;
+  border-radius: 8px;
+  border: 1px solid var(--nav100);
+  background-color: var(--nav200);
+  padding: 5px;
+  margin-left: 8px;
 }
-
 header .search svg path {
-	fill: #b5b5b5;
+  fill: #b5b5b5;
 }
-
 header .search input#input-search {
-	padding: 2px;
-	background-color: var(--nav200);
-	border: 0;
-	margin-left: 6px;
-	color: #b5b5b5;
+  padding: 2px;
+  background-color: var(--nav200);
+  border: 0;
+  margin-left: 6px;
+  color: #b5b5b5;
 }
-
+header .search input#input-search::-moz-placeholder {
+  font-weight: 500;
+  font-size: 13px;
+  color: #b5b5b5;
+}
 header .search input#input-search::placeholder {
-	font-weight: 500;
-	font-size: 13px;
-	color: #b5b5b5;
+  font-weight: 500;
+  font-size: 13px;
+  color: #b5b5b5;
 }
-
 header .notification-icon {
-	margin: 8px;
+  margin: 8px;
 }
-
 header .menu {
-	height: 32px;
-	width: 32px;
-	background-color: rgb(54, 251, 161);
-	color: rgba(0, 0, 0, 0.4);
-	border-radius: 6px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 2px;
+  height: 32px;
+  width: 32px;
+  background-color: rgb(54, 251, 161);
+  color: rgba(0, 0, 0, 0.4);
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2px;
 }
 
 main {
-	margin-top: 30px;
+  margin-top: 30px;
 }
 
 /* Trial Callout */
-
 main .trial-callout-container {
-	background-color: var(--dark-bg);
-	display: flex;
-	padding: 12px 8px 12px 18px;
+  background-color: var(--dark-bg);
+  display: flex;
+  padding: 12px 8px 12px 18px;
 }
-
 main .trial-callout-container .trial-callout-details p {
-	color: var(--light);
+  color: var(--light);
 }
-
 main .trial-callout-container .trial-callout-details .select-a-plan {
-	border-radius: 6px;
-	border: 1px solid var(--white);
-	padding: 6px 12px;
-	color: var(--font-dark);
-	margin-top: 16px;
+  border-radius: 6px;
+  border: 1px solid var(--white);
+  padding: 6px 12px;
+  color: var(--font-dark);
+  margin-top: 16px;
 }
 
 /* Setup Guide */
-main .setup-guide-container {
-	background-color: var(--white);
-	margin-top: 16px;
-	padding: 8px;
+.setup-guide-container {
+  background-color: var(--white);
+  margin-top: 16px;
+  padding: 8px;
+  /* Options List */
 }
-
-main .setup-guide-container .inner-guide {
-	padding: 8px;
-	display: flex;
+.setup-guide-container .inner-guide {
+  padding: 8px;
+  display: flex;
 }
-
-main .setup-guide-container .inner-guide .setup-guide-details {
-	flex: 1;
+.setup-guide-container .inner-guide .setup-guide-details {
+  flex: 1;
 }
-
-main .setup-guide-container .inner-guide .setup-guide-details .completed {
-	display: flex;
-	margin-top: 16px;
+.setup-guide-container .inner-guide .setup-guide-details .completed {
+  display: flex;
+  margin-top: 16px;
 }
-
-main .setup-guide-container .inner-guide .setup-guide-details h1 {
-	margin-bottom: 4px;
+.setup-guide-container .inner-guide .setup-guide-details h1 {
+  margin-bottom: 4px;
 }
-
-main
-	.setup-guide-container
-	.inner-guide
-	.setup-guide-details
-	.setup-guide-progress-bar {
-	width: 72px;
-	margin-left: 8px;
-	accent-color: black;
+.setup-guide-container .inner-guide .setup-guide-details .setup-guide-progress-bar {
+  width: 72px;
+  margin-left: 8px;
+  accent-color: black;
 }
-/* 
-main .setup-guide-container .inner-guide img {
-	display: none;
+.setup-guide-container ul {
+  margin-top: 16px;
+  list-style-type: none;
 }
-
-main .setup-guide-container .inner-guide img.active {
-	display: block;
-} */
+.setup-guide-container ul li {
+  background-size: 10px;
+  font-size: 13px;
+  font-weight: 500;
+  margin: 8px;
+}
+.setup-guide-container ul li .option-container {
+  display: flex;
+  align-items: center;
+}
+.setup-guide-container ul li .guide-option {
+  margin-right: 8px;
+}
+.setup-guide-container ul li .option-details {
+  margin: 16px 0;
+}
 
 /* Desktop Styles- */
-@media screen and (min-width: 768px) {
-}
